--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
