--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "dayjs": "^1.11.13",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-fs": "^2.20.0",
